--- a/personas.css
+++ b/personas.css
@@ -364,13 +364,13 @@ ul {
 }
 
 .storyboard-picture {
-    height: 30rem;
+    height: 20rem;
     width: 20rem;
 
     border: 0.125rem solid var(--light);
     border-radius: 1rem;
 
-    background-size: contain;
+    background-size: cover;
 }
 
 #storyboard-picture-1 {
